Fixed navbar collapse

--- a/src/App.css
+++ b/src/App.css
@@ -187,9 +187,8 @@ body {
 
 /* NavBar */
 
-.nav-logo {
-  height: 50px;
-  width: 50px;
+.navbar {
+  background-color: rgba(10, 10, 10, .9);
 }
 
 .navbar-fixed-top {
@@ -208,6 +207,53 @@ body {
 
 .navbar-toggle {
   margin-top: 23px;
+}
+
+@media (max-width: 992px) {
+  .navbar-header {
+    float: none;
+  }
+
+  .navbar-toggle {
+    display: block;
+  }
+
+  .navbar-collapse.collapse {
+    display: none !important;
+  }
+
+  .navbar-collapse {
+    margin-top: 15px;
+    background-color:rgba(10, 10, 10, .9);
+  }
+
+  .navbar-collapse.collapse {
+    display: none!important;
+  }
+
+  .navbar-nav {
+    float: none!important;
+    margin: 7.5px -15px;
+  }
+
+  .navbar-nav>li {
+    float: none;
+  }
+
+  .navbar-nav>li>a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+}
+
+.nav-logo {
+  height: 50px;
+  width: 50px;
+}
+
+.navbar-title {
+  font-size: 20px;
+  width: 280px;
 }
 
 /* Landing */
